# AutoBub3hs

./: .hgignore  AnalyzerUnit.cpp  AnalyzerUnit.hpp  AutoBub.layout  AutoBub2.cbp  AutoBub3.cbp  AutoBubStart.cpp  AutoBubStart3.cpp  CMakeLists.txt  Makefile  README.md  abub  contributors.txt  logfile.out
AlgorithmTraining/: Trainer.cpp  Trainer.hpp
BGS/: bgs.cpp  bgs.hpp
BGS/methods/: AdaptiveSelectiveBackgroundLearning.cpp  AdaptiveSelectiveBackgroundLearning.h  DPZivkovicAGMMBGS.h
BGS/methods/jmo/: MultiLayerBGS.cpp  MultiLayerBGS.h
BubbleLocalizer/: L2Localizer.cpp  L2Localizer.hpp  L3Localizer.cpp  L3Localizer.hpp  TplMatchLocalizer.cpp  TplMatchLocalizer.hpp
ImageEntropyMethods/: ImageEntropyMethods.cpp  ImageEntropyMethods.hpp
LBP/: CMakeLists.txt  LBPUser.cpp  LBPUser.hpp  Makefile  lbp  main.cxx
PICOFormatWriter/: PICOFormatWriter.cpp  PICOFormatWriter.hpp  PICOFormatWriterV2.cpp  PICOFormatWriterV2.hpp  PICOFormatWriterV3.cpp
ParseFolder/: ParseFolder.cpp  ParseFolder.hpp
bubble/: bubble.cpp  bubble.hpp
common/: CommonDatatypes.h  CommonParameters.h  UtilityFunctions.cpp  UtilityFunctions.hpp
config/: MultiLayerBGS.xml
